Grab token automatically

--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
   "license": "ISC",
   "dependencies": {
     "discord.js": "github:hydrabolt/discord.js",
+    "ps-node": "^0.1.6",
     "sanitize-filename": "^1.6.1",
-    "shelljs": "^0.8.2"
+    "shelljs": "^0.8.2",
+    "sqlite": "^2.9.2"
   }
 }
